@@ -45,6 +45,7 @@ CHANGELOG Roundcube Webmail
 - Fix errors when using localStorage in Safari's private browsing mode (#1489996)
 - Fix bug where $Forwarded flag was being set even if server didn't support it (#1490000)
 - Fix various iCloud vCard issues, added fallback for external photos (#1489993)
+- Fix invalid Content-Type header when send_format_flowed=false (#1489992)
 
 RELEASE 1.0.2
 -------------
